--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fxikhp286/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/fxikhp286/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fxikhp286/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fxikhp286/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fxikhp286/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717175.md#1" target="_blank">12月15日加税？川普或周四开会讨论</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717175.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1058995286-150x120.jpg" align ="left"></a>据三名知情人士周三对路透社透露，美国总统川普（特朗普）很可能在周四（12月12日）与高级贸易顾问会面，讨论是否按原计划在12月15日，对近1600亿美元中国商品征收15%的关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:54 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717158.md#1" target="_blank">【拍案惊奇】面对强权 港人还有两样“武器”</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717158.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df832a8be8a0c4_ttl7dayDkn_60d4138ddd69b5ff-150x120.jpg" align ="left"></a>12月11号，美国《时代》杂志公布，被称为环保少女的瑞典人格蕾塔·通贝里（Greta Thunberg），获得该杂志评选的2019年度“风云人物”。但在评选的前5名里，还有香港示威者、美国总统川普、美国众议院议长等人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1" target="_blank">中国购58.5万吨美国大豆 4月份来最大宗</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/0bd17c9aff9da98bbdf47db52c67652c-150x120.jpg" align ="left"></a>美国农业部12月11日公布，中国买家订购了58.5万吨的美国大豆，为8个多月来最大的一笔。这是美国农业部自11月14日以来，首次宣布向中国出售大豆，也是自4月1日以来最大一笔对华大豆销售。今年4月1日，中国采购量为82.8万吨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:34 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717105.md#1" target="_blank">大陆最新非洲猪瘟疫情 陕西有野猪死亡</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717105.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-697069006-1-600x400-150x120.jpg" align ="left"></a>非洲猪瘟疫情在大陆持续蔓延，重创养猪业。目前最新消息说，陕西境内有死亡野猪也检测出非洲猪瘟病毒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:28 AM							</td></tr>
@@ -22,13 +23,8 @@
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank">疫情扩大 哈尔滨再有13名学生感染布病</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716656.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/06/806120829481093-150x120.jpg" align ="left"></a>中国农科院兰州兽医研究所11月下旬爆发布鲁氏菌病（布病），并导致至少96人被感染后，同属中国农科院的哈尔滨兽医研究所再有13名学生感染布病。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 4:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank">贵州贫困县举债22亿元 造山寨“紫禁城”</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716409.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/111-150x120.gif" align ="left"></a>贵州一个国家级贫困县举债22亿（人民币，下同）、历时4年，打造一座“山寨版紫禁城”，官媒称，该县债务达400多亿元。网民质疑工程有官商中饱私囊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:55 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1" target="_blank">甘肃省前610主任庞波被举报到海外</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/10/n11714077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/610-1-150x120.jpg" align ="left"></a>甘肃省原“610”主任庞波在任职期间操纵甘肃各地的监狱、劳教所、洗脑班等场所对法轮功学员进行疯狂的折磨和摧残，现被举报到明慧网。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1" target="_blank">美官员：感佩法轮功学员直面中共邪恶的勇气</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-10-150x120.jpg" align ="left"></a>12月10日国际人权日，美国国际宗教自由委员会（USCIRF）委员加里?鲍尔（Gary Bauer）表示， 法轮功遭到中共“尤为严重”的镇压，但是法轮功学员面对中共邪恶的勇气令他“震撼”。
-
-鲍尔10日在美国国会举行的“全球反迫害制止中共暴行 声援退党大潮”的研讨会上表达了这一观点。
-
-他也表示，中共看似强大，但中共的解体可能会很快发生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank">孔子学院再遭挫 比利时荷兰语大学终止合作</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716484.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VUB_campus_Etterbeek-150x120.jpg" align ="left"></a>比利时荷语“布鲁塞尔自由大学”（VUB）周二（12月10日）决定，自2020年6月起，将不再延长与孔子学院的合作。VUB认为，自由研究处于风险中，此外，孔子学院中方院长被比利时安全部指控从事间谍活动，也促使VUB取消合作。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank">传国家京剧院副院长袁慧琴交辞职申请</a><br></h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716317.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-7-150x120.jpg" align ="left"></a>知名京剧演员姜亦珊去世后，微信圈疯传国家京剧院副院长袁慧琴已经提交请辞申请，并主动投案表示愿意接受调查。但袁仍然参加了国家大剧院近日的两场活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717468.md#1" target="_blank">河南安置房一敲就碎 民众：谁敢收房住进去？</a><br></h3>近日，河南郑州金水区小贺庄村安置房，被村民发现是豆腐渣工程——磁砖一碰就掉、梁柱混凝土破碎掉落等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/11/n11716940.md#1" target="_blank">台汉光兵推军演 美国印太联络官将首次进驻</a><br></h3>美台军事交流持续升温，可望进阶至准战略伙伴关系。上周，美国B-52轰炸机首进台北飞航情报区，另外传出台湾2020年规划的汉光电脑军演模拟将首度纳入美军连络官即时联系，演练台美双方在军事通报机制。这些动作可谓美国具体落实今年五月底发表印太战略报告中所陈述将与台湾发展强有力伙伴关系的目标。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717304.md#1" target="_blank">内蒙古鄂尔多斯公安局高官刘杰落马</a><br></h3>中共内蒙古公安系统被深度清洗。12月12日，内蒙古鄂尔多斯市公安局副局长刘杰涉嫌“严重违纪违法”，目前正在接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 1:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717219.md#1" target="_blank">山东90后男子救轻生女双双遇难</a><br></h3>12月11日晚7时后，在杭州下沙街道幸福南路东海橙郡小区附近的一座桥上，一名安徽籍高中女生轻生坠入河中。随后当场有一90后山东男生路过，于是跳入河中救此女孩。但两人均遇难。大陆网民纷纷赞赏男子见义勇为的精神，但也为之惋惜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:32 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/fxikhp286/djy/blob/master/gb/19/12/12/n11717137.md#1" target="_blank">辽宁抚顺石油二厂突发大火 火光冲天</a><br></h3>12月11日晚，辽宁省抚顺市搭连桥东侧抚顺石油二厂突发大火。失火原因不明。
